@@ -167,7 +167,7 @@ our %EXPORT_TAGS = (
 
 Exporter::export_ok_tags('internal');
 
-our $VERSION = '4.4_5';
+our $VERSION = '4.4_4';
 
 #
 # Chain Table
@@ -1185,18 +1185,9 @@ sub finish_section ( $ ) {
     $sections{$_} = 1 for split /,/, $sections;
 
     for my $zone ( all_zones ) {
-	my $mark = defined_zone( $zone )->{mark};
 	for my $zone1 ( all_zones ) {
-	    my $mark1 = ( defined_zone( $zone1 )->{mark} || 0 ) << VIRTUAL_BITS;
 	    my $chainref = $chain_table{'filter'}{rules_chain( $zone, $zone1 )};
-
-	    finish_chain_section $chainref, $sections if $chainref->{referenced} || $mark || $mark1;
-
-	    if ( $sections{RELATED} ) {
-		add_rule $chainref, '-j MARK --or-mark ' . in_hex($mark)  if $mark;
-		add_rule $chainref, '-j MARK --or-mark ' . in_hex($mark1) if $mark1;
-	    }
-
+	    finish_chain_section $chainref, $sections if $chainref->{referenced};
 	}
     }
 }
