@@ -1724,11 +1724,10 @@ sub generate_matrix() {
 
 		for my $hostref ( @{$arrayref} ) {
 		    my $ipsec_match = match_ipsec_in $zone , $hostref;
-		    my $exclusion   = source_exclusion( $hostref->{exclusions}, $frwd_ref );
 		    for my $net ( @{$hostref->{hosts}} ) {
 			add_jump(
 				 $sourcechainref,
-				 $exclusion,
+				 source_exclusion( $hostref->{exclusions}, $frwd_ref ),
 				 ! @{$zoneref->{parents}},
 				 join( '', $interfacematch , match_source_net( $net ), $ipsec_match )
 				);
@@ -1760,7 +1759,6 @@ sub generate_matrix() {
 	my $nested           = $zoneref->{options}{nested};
 	my $parenthasnat     = 0;
 	my $parenthasnotrack = 0;
-	my $virtual          = $zoneref->{virtual};
 
 	if ( $nested ) {
 	    #
@@ -1825,8 +1823,6 @@ sub generate_matrix() {
 			    my $outputref;
 			    my $interfacematch = '';
 
-			    add_jump $filter_table->{OUTPUT}, $chain1, 0, "-m mark --mark ! 0/" . in_hex($virtual) if $virtual; 
-
 			    if ( use_output_chain $interface ) {
 				$outputref = $filter_table->{output_chain $interface};
 				add_jump $filter_table->{OUTPUT}, $outputref, 0, match_dest_dev( $interface ) unless $output_jump_added{$interface}++;
@@ -1885,7 +1881,6 @@ sub generate_matrix() {
 			}
 
 			if ( $chain2 ) {
-			    add_jump $filter_table->{INPUT}, $chain2, 0, "-m mark --mark ! 0/" . in_hex($virtual) if $virtual; 
 			    add_jump $inputchainref, source_exclusion( $exclusions, $chain2 ), 0, join( '', $interfacematch, $source, $ipsec_in_match );
 			    move_rules( $filter_table->{input_chain $interface} , $filter_table->{$chain2} ) unless use_input_chain $interface;
 			}
@@ -1958,11 +1953,6 @@ sub generate_matrix() {
 	} else {
 	    @dest_zones =  @zones ;
 	}
-
-	if ( $frwd_ref ) {
-	    add_jump $filter_table->{FORWARD}, $frwd_ref, 0, "-m mark --mark ! 0/" . in_hex($virtual) if $virtual;
-	}
-
 	#
 	# Here it is -- THE BIG UGLY!!!!!!!!!!!!
 	#
@@ -1971,7 +1961,6 @@ sub generate_matrix() {
 	#
 	for my $zone1 ( @dest_zones ) {
 	    my $zone1ref = find_zone( $zone1 );
-	    my $virtual1 = $zone1ref->{virtual};
 
 	    next if $filter_table->{rules_chain( ${zone}, ${zone1} )}->{policy}  eq 'NONE';
 
@@ -2001,9 +1990,8 @@ sub generate_matrix() {
 			    next if $hostref->{options}{sourceonly};
 			    if ( $zone ne $zone1 || $num_ifaces > 1 || $hostref->{options}{routeback} ) {
 				my $ipsec_out_match = match_ipsec_out $zone1 , $hostref;
-				my $exclusion = dest_exclusion( $hostref->{exclusions}, $chain);
 				for my $net ( @{$hostref->{hosts}} ) {
-				    add_jump( $frwd_ref, $exclusion, 0, join( '', match_dest_dev( $interface) , match_dest_net($net), $ipsec_out_match ) );
+				    add_jump $frwd_ref, dest_exclusion( $hostref->{exclusions}, $chain), 0, join( '', match_dest_dev( $interface) , match_dest_net($net), $ipsec_out_match );
 				}
 			    }
 			}
@@ -2044,7 +2032,6 @@ sub generate_matrix() {
 					for my $host1ref ( @$array1ref ) {
 					    next if $host1ref->{options}{sourceonly};
 					    my $ipsec_out_match = match_ipsec_out $zone1 , $host1ref;
-					    my $exclusion = dest_exclusion( $host1ref->{exclusions}, $chain );
 					    for my $net1 ( @{$host1ref->{hosts}} ) {
 						unless ( $interface eq $interface1 && $net eq $net1 && ! $host1ref->{options}{routeback} ) {
 						    #
@@ -2052,7 +2039,7 @@ sub generate_matrix() {
 						    #
 						    add_jump(
 							     $excl3ref ,
-							     $exclusion,
+							     dest_exclusion( $host1ref->{exclusions}, $chain ),
 							     0,
 							     join( '',
 								   $match_source_dev,
@@ -2061,11 +2048,6 @@ sub generate_matrix() {
 								   match_dest_net($net1),
 								   $ipsec_out_match )
 							    );
-						    add_jump($excl3ref ,
-							     $exclusion,
-							     0,
-							     "-m mark ! --mark 0/" . in_hex($virtual1) ) if $virtual1;
-							     
 						}
 					    }
 					}
