@@ -12,7 +12,7 @@ Changes in Shorewall 4.4.5
 
 6)  Fix 'show policies' in Shorewall6.
 
-7)  Limit the maximum provider mark to 0xff0000.
+7)  Limit the maximum provider mark to 0xf0000.
 
 Changes in Shorewall 4.4.4
 
