@@ -173,6 +173,10 @@ Shorewall 4.4.5
     default. If, for some reason, you don't want 'track' then specify
     'notrack' for the provider.
 
+14) With HIGH_ROUTE_MARKS=Yes and WIDE_TC_MARKS=Yes, the maximum
+    provider mark value is 0xf0000. This limits the number of providers
+    to 15.
+
 ----------------------------------------------------------------------------
           P R O B L E M S   C O R R E C T E D   I N   4 . 4 . 5
 ----------------------------------------------------------------------------
@@ -229,6 +233,10 @@ None.
 
     	     $FW             dmz             REJECT          info
     	     $FW             all             ACCEPT
+
+3)  With HIGH_ROUTE_MARKS=Yes and WIDE_TC_MARKS=Yes, the maximum
+    provider mark value is now 0xf0000. This limits the number of
+    providers to 15.
 
 ----------------------------------------------------------------------------
                 N E W   F E A T U R E S   I N   4 . 4 . 0
